--- a/wiki/CreatingJSClasses.wiki
+++ b/wiki/CreatingJSClasses.wiki
@@ -92,8 +92,8 @@ c.Set(...)
 
 Again, that's all there is to it. Now when we call `new MyClass(...)` from JS, the following will happen:
 
-  * v8 will create a new _JS_ instance of MyClass (_not_a native instance).
-  * v8 will pass that new JS object to an internal !WeakJSClassCreator proxy function which will pass on the arguments to the client-specified specified constructor.
+  * v8 will create a new _JS_ instance of !MyClass (not a native instance).
+  * v8 will pass that new JS object to an internal WeakJSClassCreator proxy function which will pass on the arguments to the client-specified specified constructor.
   * If the client-side ctor fails, the internal constructor will throw a JS-side exception (there is no other way to notify JS of a failed construction).
   * If the client ctor succeeds, the internal ctor will then set up a weak pointer callback, which will cause the client-specified dtor to be called _if_ the v8 GC ever decides to kick in. The internal ctor also packs the new native pointer into an internal field of the JS object for later reference by bound functions.
 
