--- a/wiki/PluginWhio.wiki
+++ b/wiki/PluginWhio.wiki
@@ -121,8 +121,8 @@ In addition to the interface defined by IOBase, it has:
 || *Properties* (read-only) || *Notes* ||
 || `IODevice ioDevice` || Only for devices created with the `IODevice(IODevice,int,int)` constructor, this points to the subdevice's pointed-to device. ||
 || `string fileName` || Only for objects which are associated with a file. ||
-|| `bool canWrite` || Value depends on how the device was opened. ||
-|| `bool canRead` || Value depends on how the device was opened. ||
+|| `bool canWrite` || Value depends on how the device was opened. It is not always possible for the stream opener to know if a given stream supports writing (e.g. stdin), and this value may be set incorrectly for those cases. Writing to such a stream will cause the normal write failure, nothing catastrophic. ||
+|| `bool canRead` || Value depends on how the device was opened. For files this value is always true, even if the file being opened cannot support reading (e.g. stdout). That is because the open() routines don't have enough information to know that. In a case like that, reading would fail in the normal manner. ||
 
 
 ===SEEK_SET and friends===
