Edited wiki page through web user interface.

--- a/wiki/CreatingJSClasses.wiki
+++ b/wiki/CreatingJSClasses.wiki
@@ -41,29 +41,31 @@ binder.Set( "funcOne", my_callback_func )
 
 With the JSClassCreator, the client is responsible for:
 
-  * In the ctor, put your native somewhere where member native functions can get to it (e.g. put it in an Internal field in the JS new object).
+  * In the ctor, put your native object somewhere where member native functions can get to it (e.g. put it in an Internal field in the JS new object).
   * In member functions, extract the native element as needed.
 
-Once that's in place we can:
+(The WeakJSClassCreator does those things for your, but lets start with the basics before we skip to that.)
+
+Once that's in place we can do the following from JS:
 
 {{{
 var obj = new MyClass(...);
 }}}
 
-For the most basic cases, that's all that necessary, in terms of C++ setup. However, the most significantly missing feature of !MyClass is memory management. v8 provides a callback mechanism with which we can be notified "when a context no longer needs an object." The callback mechanism is, due to v8 design decisions, not 100% reliable (there is never a _guaranty_ that our callback will be called!), which makes it useless as a basis for resource management when destructors of certain types _must_ be called to avoid resource leaks, data corruption, etc.
+For the most basic cases, that's all that necessary, in terms of C++ setup. However, the most significantly missing feature of !MyClass is memory management. v8 provides a callback mechanism with which we can be notified "when a context no longer needs an object." The callback mechanism is, due to v8 design decisions, not 100% reliable (there is never a _guaranty_ that our callback will be called!), which makes it useless as a basis for resource management when destructors of certain types _must_ be called to avoid resource leaks, data corruption, etc. To be clear, when your application exits, the memory used by your bindings _will_ be freed, but if they are not GC'd before that then their _destructors_ will not be called. For most types a missing dtor call is not all that critical, assuming the application is exiting anyway, but for some types it's essential for proper operation.
 
 =Backing up a bit: the garbage collection problem=
 
 Let's back up a moment and describe the overall problem:
 
-When an object is created in JavaScript, there is normally no client-visible "native" component to that value - it is an opaque type defined by v8, and has no visible association with a native value. That's all fine and good because the JS engine takes care of cleaning up those objects when it no longer needs them. When "binding" native classes to JS, we invariably associate a JS class with an instance of a C++ class (or some other native type - it need not be a class, e.g. it may be an opaque pointer type from a third-party C library). To do such bindings effectively we need several components:
+When an object is created in JavaScript, there is normally no client-visible "native" component to that value - it is an opaque type defined by v8, and has no visible association with a native value. That's all fine and good because the JS engine takes care of cleaning up those objects when it no longer needs them. When "binding" native classes to JS, we invariably associate a JS class with an instance of a C++ class (or some other native type - it need not be a class, e.g. it may be an opaque pointer type from a third-party C library). To do such bindings effectively we need at least these components:
 
   * A way to internally associate the native data with the JS object. In v8 this is done using `v8::Object::SetInternalField()` and the `v8::External` type. In fact, `v8::External` is the _only_ option for us here, because it is the only v8 type for which we can get a stable unique-per-process value (`External::Value()`), and having some sort of lookup key (in this case a void pointer) is an essential component of binding classes.
   * We "should" have a way to be notified when the JS part of an object is destroyed. In v8 this is accomplished by registering a "weak pointer" callback with the JS object. That callback will be called when (_if_) the v8 GC decides that there are no JS-side references to the object. When this callback is triggered, we can take care of properly deleting the native object and unbinding it from JS-land.
 
 In practice there are a few wrinkles in that story, but we will skip over those now for the sake of clarity, and will touch on them again later on.
 
-The documentation for v8's weak pointers support is a bit spotty, and one can easily spend hours experimenting before the first attempts at class wrapping work. Or we can use WeakJSClassCreator, which was authored after many hours of painful experimentation and sorting through the vague documentation regarding weak pointers in v8...
+The documentation for v8's weak pointers support is a bit spotty, and one can easily spend hours experimenting before the first attempts at class wrapping work. _Or_ we can use WeakJSClassCreator, which was authored after many hours of painful experimentation and sorting through the vague documentation regarding weak pointers in v8...
 
 =WeakJSClassCreator=
 
@@ -73,9 +75,8 @@ to/from native objects of a given type. It is based on the v8 "weak
 persistent pointers" concept, and thus its odd name. It is used mostly
 like JSClassCreator, the notable difference being a template
 argument. As a template argument it takes a native type on whos behalf
-it should act. In addition, we need a `WeakJSClassCreatorOps<MyType>` 
-class template specialization, which is described fully in the API docs
-and briefly shown here:
+it should act. In addition, client code must provide a `WeakJSClassCreatorOps<MyType>` 
+class template specialization for each bound type. That class is described fully in the API docs and briefly shown here:
 
 {{{
 namespace v8 { namespace juice {
@@ -100,21 +101,21 @@ namespace v8 { namespace juice {
 }} // namespaces
 }}}
 
-Again, their semantics are documented in full
+Again, the semantics of the API are documented in full
 [http://code.google.com/p/v8-juice/source/browse/trunk/src/include/v8/juice/WeakJSClassCreator.h in the source code].
 
 In brief:
 
   * The constructor is responsible for trying to create a `MyClass` object from the given arguments, but it is _not_ responsible for binding that native to the JS object. If it cannot create a new object, it must return 0 and may optionally put some descriptive error string in the given string reference (note that it is not const!), and the internal handler provided by WeakJSClassCreator will convert the error text into a JS-side exception. On success, the ctor must return a new instance of the native object. The internals of WeakJSClassCreator will then bind that native to JS using the weak pointer callback mechanism.
-  * The destructor function must destroy the object using some type-specific logic. Note that it may be called from the weak pointer trigger or it may be called via client-side action (e.g. a `close()` function for a given type might want to destroy the native object).
+  * The destructor function must destroy the object using some type-specific logic (e.g. `delete obj` for most C++ types). Note that it may be called from the weak pointer trigger or it may be called via client-side action. e.g. a `OutStream.close()` function for a given type might want or need to destroy the native object, and the API provides `WeakJSClassCreator::DestroyObject()` to support that.
 
 Now that we have a ctor and a dtor, we've got everything we need. From there we can let WeakJSClassCreator implement the more tedious bits for us:
 
 {{{
 typedef WeakJSClassCreator<MyClass> CC;
 CC c( "MyClass", objectToAddClassTo );
-c.Set(...)
- .Set(...)
+c.Set("propertyOne",String::New("Hi, world!"))
+ .Set("answer", Integer::New(42))
  .Set(...)
  .Set(...)
  .Seal(); // must be the last setter call made on this object.
@@ -125,11 +126,11 @@ Again, that's all there is to it. Now when we call `new MyClass(...)` from JS, t
   * v8 will create a new _JS_ instance of !MyClass (not a native instance).
   * v8 will pass that new JS object to an internal WeakJSClassCreator proxy function which will pass on the arguments to the client-specified specified constructor.
   * If the client-side ctor fails, the internal constructor will throw a JS-side exception (there is no other way to notify JS of a failed construction).
-  * If the client ctor succeeds, the internal ctor will then set up a weak pointer callback, which will cause the client-specified dtor to be called _if_ the v8 GC ever decides to kick in. The internal ctor also packs the new native pointer into an internal field of the JS object for later reference by bound functions.
+  * If the client ctor succeeds, the internal ctor will then set up a weak pointer callback, which will cause the client-specified dtor to be called _if_ the v8 GC ever decides to kick in. The internal ctor also packs the new native pointer into an internal field of the JS object for later reference by bound functions (see `WeakJSClassCreator::GetSelf()` and `WeakJSClassCreator::GetObject()`).
 
-The native object can be fetched later by passing a bound JS object to one of the static methods `WeakJSClassCreator::GetSelf()` or `WeakJSClassCreator::GetObject()`, both of which work similarly but have very slightly different semantics.
+The native object can be fetched later by passing a bound JS object to one of the static methods `WeakJSClassCreator::GetSelf()` or `WeakJSClassCreator::GetObject()`, both of which work similarly but have very slightly different semantics. The former is expicitly intended to be pass `argv.This()` from a bound member function, whereas the latter can be passed a `Handle<Value>` and it will attempt to figure out if it's of the wrapped native type. The second option is useful when passing wrapped objects as arguments, as opposed to them being the `this` object.
 
-Clients can use the `v8::juice::bind` and `v8::juice::cleanup` APIs in their ctors and dtors to get enhanced (and type-safe) type conversions and "supplemental" GC support. See the API docs for more details.
+Clients can optionally use the `v8::juice::bind` and `v8::juice::cleanup` APIs in their ctors and dtors to get enhanced (and type-safe) type conversions and "supplemental" GC support. Or they can tie their own supplemental GC by adding the logic to their `WeakJSClassCreatorOps<T>::Ctor()` and `Dtor()` routines. See the API docs for more details.
 
 =Real-world examples=
 
